--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Meu Blog</title>
 </head>
 <body>
-    <h1>título do meu blog</h1>
-    <h2>subtítulo do meu blog</h2>
+    <h1>Camaro Exorcist</h1>
+    <h2>historia e curiosidades</h2>
 </body>
 </html>
