--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Meu Blog</title>
 </head>
 <body>
-  <div>align="center"</div>  <h1>Camaro Exorcist</h1>
+  <div align="center"> </div>  <h1>Camaro Exorcist</h1>
     <h2>historia e curiosidades</h2>
 </body>
 </html>
