--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
-    <h2>historia e curiosidades</h2>
+    <h2 align="center">historia e curiosidades</h2>
 </body>
 </html>
