--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
+    <h3>Historia</h3> <style>color:#0000FF</style>
 </body>
 </html>
