--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
-    <h3>Historia</h3> <style>color:#0000FF</style>
+    <h3>Historia</h3>
+    <style>h3 /*font-size:20px</style>
 </body>
 </html>
