--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
     <h3>Historia</h3>
-    <style>h3 /*font-size:20px</style>
+    <style>
+       h3{ 
+       text-align:left
+       }
+    p{
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-size: larger;
+    font-weight: 200;
+    font-style: normal;
+    color: crimson;
+    }
+    </style>
 </body>
 </html>
