--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
     <h3>Historia</h3>
+    <head>
     <style>
        h3{ 
-       text-align:left
+       text-align:left;
        }
     p{
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -20,6 +21,7 @@
     font-style: normal;
     color: crimson;
     }
+    </head>
     </style>
 </body>
 </html>
