--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
        }
     p{
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-size: larger;
+      /*font-size: larger;
     font-weight: 200;
     font-style: normal;
-    color: crimson;
+    color: crimson;*/
     }
-    </head>
     </style>
+    </head>
 </body>
 </html>
