--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
-    <h3<style>
+    <h3><style>
         h3{ 
         text-align:left;
         }
@@ -19,7 +19,7 @@
         font-style:normal;
         color: crimson;*/
         }
-        </style>>Historia</h3>
+        </style>Historia</h3>
     
 </body>
 </html>
