--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         }
         p{
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        /*font-size:larger;
+        font-size:larger;
         font-weight:200;
         font-style:normal;
-        color: crimson;*/
+        color: crimson;
         }
-        </style>Historia</h3>
+        </style>
+        Historia</h3>
     
 </body>
 </html>
