--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
-    <h3><style>
+    <style>
         h3{ 
         text-align:left;
         }
@@ -20,7 +20,7 @@
         color: crimson;
         }
         </style>
-        Historia</h3>
+        Historia
     
 </body>
 </html>
