--- a/index.html
+++ b/index.html
@@ -8,19 +8,6 @@
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
-    <style>
-        h3{ 
-        text-align:left;
-        }
-        p{
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-size:larger;
-        font-weight:200;
-        font-style:normal;
-        color: crimson;
-        }
-        </style>
-        Historia
-    
+    <h3>Historia</h3>
 </body>
 </html>
