--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1 align="center">Camaro Exorcist</h1> 
     <h2 align="center">historia e curiosidades</h2>
     <h3>Historia</h3>
-    <h4>O Chevrolet Camaro ZL1 está se aproximando de sua aposentadoria. Para marcar esse momento, a empresa de preparação Hennessey Performance lançou o Camaro ZL1 Exorcist Final Edition, equipado com um mon... </h4>
-</body>
+    <h4>O Chevrolet Camaro Exorcist é uma versão modificada do Camaro ZL1, criada pela Hennessey Performance. Focando em desempenho extremo, o Exorcist possui um motor V8 sobrealimentado de 6,2 litros, capaz de gerar até 1.000 cavalos de potência, oferecendo acelerações impressionantes e desempenho superior ao de carros superesportivos. Com ajustes no sistema de suspensão, freios e aerodinâmica, o Camaro Exorcist é projetado para proporcionar uma experiência de condução emocionante e de alta performance, com um design agressivo e sofisticado. 
+    </h4>
+        
 </html>
