--- a/index.html
+++ b/index.html
@@ -26,4 +26,15 @@
         
         Nome "Exorcist": O nome "Exorcist" foi escolhido para destacar o poder de "expulsar" outros carros de alto desempenho. É uma referência ao clássico filme de terror "O Exorcista", simbolizando um carro capaz de superar qualquer outro com suas capacidades extremas.</h6>
         
+
+
+        <
+          <style>
+            h6{
+              texte-align-left
+            }
+            p{
+            font-family:Calibri ; font: size 40px; font-weight::shadow font-style:italic color:#000 ;
+          }
+          </style>
 </html>
