--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Blog</title>
+    <style>
+      h6{texte-align-left;
+      }
+      p{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 40px;
+        font-weight: bold;
+        font-style: italic;
+        color: #0edd8e;
+      }
+    </style>
 </head>
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
@@ -25,16 +36,4 @@
         Personalização: Além da potência, o Exorcist oferece várias opções de personalização, como ajustes na suspensão, aerofólios e rodas específicas para melhorar ainda mais o desempenho e o visual do carro.
         
         Nome "Exorcist": O nome "Exorcist" foi escolhido para destacar o poder de "expulsar" outros carros de alto desempenho. É uma referência ao clássico filme de terror "O Exorcista", simbolizando um carro capaz de superar qualquer outro com suas capacidades extremas.</h6>
-        
-
-
-        <
-          <style>
-            h6{
-              texte-align-left
-            }
-            p{
-            font-family:Calibri ; font: size 40px; font-weight::shadow font-style:italic color:#000 ;
-          }
-          </style>
 </html>
