--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h4>O Chevrolet Camaro Exorcist é uma versão modificada do Camaro ZL1, criada pela Hennessey Performance. Focando em desempenho extremo, o Exorcist possui um motor V8 sobrealimentado de 6,2 litros, capaz de gerar até 1.000 cavalos de potência, oferecendo acelerações impressionantes e desempenho superior ao de carros superesportivos. Com ajustes no sistema de suspensão, freios e aerodinâmica, o Camaro Exorcist é projetado para proporcionar uma experiência de condução emocionante e de alta performance, com um design agressivo e sofisticado. 
     </h4>
     <h5>Curiosidades</h5>
-    <h6>Potência extrema: O Exorcist foi projetado para produzir até 1.000 cavalos de potência, o que o coloca em uma faixa de desempenho muito acima de carros como o Dodge Challenger SRT Hellcat.
+    <h6><p>Potência extrema: O Exorcist foi projetado para produzir até 1.000 cavalos de potência, o que o coloca em uma faixa de desempenho muito acima de carros como o Dodge Challenger SRT Hellcat.</p>
 
        <p> Aceleração impressionante: Com essa potência, o Camaro Exorcist é capaz de ir de 0 a 100 km/h em menos de 3 segundos, rivalizando com supercarros de alto desempenho.</p>
         
