--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
 </head>
 <body>
   <h1 align="center">Camaro Exorcist</h1> 
-    <h2 align="center">historia e curiosidades</h2>
+    <h2 align="center">historia e curiosidades
+      <style>
+        p{
+          font-size: larger;
+        }
+      </style>
+    </h2>
+
     <h3>Historia</h3>
-    <style>
-      p{
-        font-size: 40px;
-      }
-    </style>
+
     <h4>O Chevrolet Camaro Exorcist é uma versão modificada do Camaro ZL1, criada pela Hennessey Performance. Focando em desempenho extremo, o Exorcist possui um motor V8 sobrealimentado de 6,2 litros, capaz de gerar até 1.000 cavalos de potência, oferecendo acelerações impressionantes e desempenho superior ao de carros superesportivos. Com ajustes no sistema de suspensão, freios e aerodinâmica, o Camaro Exorcist é projetado para proporcionar uma experiência de condução emocionante e de alta performance, com um design agressivo e sofisticado. 
     </h4>
     <h5>Curiosidades</h5>
