--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
        <p> Personalização: Além da potência, o Exorcist oferece várias opções de personalização, como ajustes na suspensão, aerofólios e rodas específicas para melhorar ainda mais o desempenho e o visual do carro.</p>
         
        <p> Nome "Exorcist": O nome "Exorcist" foi escolhido para destacar o poder de "expulsar" outros carros de alto desempenho. É uma referência ao clássico filme de terror "O Exorcista", simbolizando um carro capaz de superar qualquer outro com suas capacidades extremas</p> </h6>
-         
+        <h8><img src="img/img1.jpg" alt="Imagem não encontrada"
+          title="Primeira imagem"></h8> 
        </html>
