--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
        <p> Nome "Exorcist": O nome "Exorcist" foi escolhido para destacar o poder de "expulsar" outros carros de alto desempenho. É uma referência ao clássico filme de terror "O Exorcista", simbolizando um carro capaz de superar qualquer outro com suas capacidades extremas</p> </h6>
         <h8><img src="img/img1.jpg" alt="Imagem não encontrada"
-          title="Primeira imagem"></h8>
+          title="Camaro Exorcist"></h8>
           <body bgcolor="#AB61E8">
             
           </body> 
