--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
           <body>
               <img src="img/img1.jpg" alt="imagem não encontrada"
+              title="primeira imagem"
           </body>
           </html>
           <body bgcolor="#AB61E8">
