--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <body>
             <img src="https://i.pinimg.com/736x/7c/87/18/7c871803242cea44ec6aa7ee323d094e.jpg" alt="Imagem não encontrada"
              title="primeira Imagem"
+             aria-setsize="small"
           </body>
         </html>
           <body bgcolor="#EA0201">
