--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <img src="https://i.pinimg.com/736x/7c/87/18/7c871803242cea44ec6aa7ee323d094e.jpg" alt="Imagem não encontrada"
              title="primeira Imagem"
           </body>
+          </html>
         </h9>
         </html>
           <body bgcolor="#EA0201">
