--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              title="primeira Imagem"
           </body>
                 </html>
-          <body bgcolor="#EA0201">
+          <body bgcolor="#0085EB">
             
           </body> 
        </html>
