--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         font-size: 40px;
         font-weight: bold;
         font-style: italic;
-        color: #0edd8e;
+        color: #4400ff;
       }
     </style>
 </head>
