--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         font-size: 40px;
         font-weight: bold;
         font-style: italic;
-        color: #1100ff;
+        color: #b700ff;
       }
     </style>
 </head>
